styles.css
:root {
  --main-black: #1E1C1A;
  --plain-white: #fff;
  --another-white: #FFFDF9;
  --buttons: #D99655;
  --footer-bgr: #FFF0E3;
  --main-bgr: #FFF0E3;
}

* {
  margin: 0;
  padding: 0;
  text-decoration: none;
  list-style-type: none;
  box-sizing: border-box;
}

body {
  font-family: "Plus Jakarta Sans", sans-serif;
  height: 100vh;
  overflow-x: hidden;
}

img {
  max-width: 100%;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
}

#menu {
  display: none;
}

.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--plain-white);
  margin: 15px 30px 0 30px;
  padding: 1.5rem;
}

ul {
  display: flex;
  justify-content: space-between;
  gap: 2rem;
  color: var(--main-black);
  font-weight: 600;
}


.border{
  border-right: 1px solid var(--main-black);
  padding: 10px;
}

.borderx {
  padding: 10px;
}

.main-header {
  background-color: var(--footer-bgr);
  text-align: center;
  padding-top: 2rem;
}

.header {
  margin-top: 2rem;
  text-transform: uppercase;
  font-family: "Bebas Neue", sans-serif;
  font-weight: 400;
  font-size: 25px;
  color: var(--main-black);
}

button {
  background-color: var(--buttons);
  color: var(--plain-white);
  font-weight: 600;
  padding: 10px 20px;
  border: none;
  cursor: pointer;
}

.img {
  display: block;
  width: 100%;
  height: auto;
  object-fit: cover;
  object-position: center;
}

.images {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  align-items: end;
  gap: 1rem;
  padding: 5rem 2rem 0 2rem;
}

.images > :nth-child(1) {
  height: 290px;
}

.images > :nth-child(2) {
  height: 338px;
}

.images > :nth-child(3) {
  height: 232px;
}

.images > :nth-child(4) {
  height: 338px;
}

.imgs-1 {
  position: relative;
}

.imgs-1 > :nth-child(1) {
  position: absolute;
  top: -128px;
  left: 130px;
}

.imgs-1 > :nth-child(2) {
  position: absolute;
  top: 40px;
  left: 270px;
}

.imgs-1 > :nth-child(3) {
  position: absolute;
  right: 120px;
  bottom: 61px;
}

.imgs-1 > :nth-child(4) {
  position: absolute;
  right: 0;
  bottom: -80px;
}

.text {
  margin-top: 90px;
  color: var(--main-black);
   
  h2 {
   font-size: 56px;
   font-weight: 400;
   font-family: "Bebas Neue", sans-serif;
   padding-bottom: 2rem;
  }

  p {
    font-size: 18px;
    font-weight: 400;
    font-family: "Plus Jakarta Sans", sans-serif;
    padding-bottom: 2rem;
  }
}

.collection_img {
   display: flex;
   gap: 2rem;

   img {
    width: 400px;
    height: 100%;
    object-fit: cover;
    object-position: center;
    margin: 0 auto;
   }
}

.texts p {
  font-family: "Bebas Neue", sans-serif;
  font-weight: 400;
  font-size: 46px;
  

  &:nth-child(1) {
    position: relative;
    top: -70px;
    left: 100px;
  }

  &:nth-child(2) {
    position: relative;
    right: -720px;
    bottom: 160px;
  }

}

hr {
  height: 1px;
  background-color: #504C48;
  border: none;
}

.one {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2rem;
}

.image-container {
  font-weight: 600;
  font-family: "Plus Jakarta Sans", sans-serif;

  & img {
    padding-bottom: 1rem;
  }
}

.image-container span {
  float: right;
  background-color: #FFF0E3;
  padding: 5px;
  border-radius: 50%;
  position: relative;
  top: -20px;
}

.box {
  background-color: var(--main-black);
  color: var(--plain-white);
  padding: 5rem 5rem 0 5rem;
  line-height: 3rem;
}

.texts__box > :nth-child(1) {
  font-size: 18px;
}

.texts__box > :nth-child(2) {
  font-size: 56px;
}

.texts__box > :nth-child(3) {
  font-size: 25px;
}

.texts__box > :nth-child(4) {
  font-size: 18px;
}

.img__box > :nth-child(1) {
  position: relative;
  top: -245px;
  left: 415px;
}

.box_images {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  align-items: end;
  gap: 1rem;
  padding: 5rem 2rem 0 2rem;
}

.box_images > :nth-child(1) {
  height: 200px;
}

.box_images > :nth-child(2) {
  height: 338px;
}

.box_images > :nth-child(3) {
  height: 200px;
}

.box_images > :nth-child(4) {
  height: 338px;
}

.logos {
  margin-top: 4rem;
  padding: 2rem;
}

.logos h3 {
  font-size: 35px;
  font-weight: 400;
  font-family: "Bebas Neue", sans-serif;
  padding-left: 8rem;
}

.logos p {
  font-size: 18px;
  font-weight: 400;
  font-family: "Plus Jakarta Sans", sans-serif;
  padding-bottom: 2rem;
  padding-left: 8rem;
}

.logo {
  text-align: end;
}

.details-content{
  margin-top: 3rem;
  background-color: var(--footer-bgr);
  padding: 30px 0 0 30px;
}

.details-content h2 {
  font-size: 30px;
  padding-bottom: 2rem;
}

.details-content p {
  font-size: 18px;
  padding-bottom: 20px;
}

.details-content button {
  margin-bottom: 2rem;
}

.watch {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  padding: 30px 0 0 30px;
}

.watch img {
  background-color: #FFF0E3;
  padding: 15px;
  border-radius: 50%;
}

.last-sec {
  display: flex;
  justify-content: space-between;
  padding: 3rem;

  h3 {
    font-size: 35px;
    font-weight: 400;
    font-family: "Bebas Neue", sans-serif;
  }
}

.last-sec-img {
  display: flex;
  gap: 2rem;
  width: 300px;
}

footer {
  background-color: var(--main-black);
  margin-top: 4rem;
  color: var(--plain-white);

  .foo1 {
    padding: 3rem;
    text-align: center;
    line-height: 2rem;
  }

  .foo2 {
    padding: 3rem;
    display: flex;
    justify-content: space-around;
  }

  .foo3 {
    padding: 3rem;
    display: flex;
    justify-content: space-around;
  }
}

/* Responsive styles for mobile devices */

@media (max-width: 768px) {
  .nav li {
    display: none;
  }

  .flex {
    display: flex;
    gap: 20rem;
  }

  #menu {
    display: block;
    color: var(--main-black);
    font-size: 20px;
  }

  .imgs-1 {
    display: none;
  }
  
  .images {
   width: 100%;
   height: 400px;
   /* overflow-y: scroll; */
  }
  
  h1 {
    font-size: 2.5rem;
  }

  /* .images > :nth-child(2) {
   width: 100%;
}

.images > :nth-child(4) {
  width: 100%;
} */

.text h2, p {
  text-align: center;
}

.collection_img {
  flex-direction: column;
  align-items: center;
}

.texts {
  margin-top: 1rem;
}

.texts p {
  font-size: 36px;
}

.texts p:nth-child(1) {
  position: relative;
  top: -580px;
  left: -120px;
}

.texts p:nth-child(2) {
  position: relative;
  top: -140px;
  left: -100px;
}

.one p {
  text-align: left;
  margin-bottom: 5px;
}

.text-price p {
  text-align: left;
  font-size: 2rem;
}

.img__box {
  display: none;
}

.texts__box {
  text-align: center;
}

.box_images {
  display: flex;
  width: 100%;
  /* height: 400px; */
  overflow-x: scroll;
}

.logo-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.logo {
  text-align: center;

  img {
    width: 200px;
  }
}

.details-content {
  width: 100%;

  h2 {  
    text-align: center;
  } 

  p {
    text-align: center;
    font-size: 16px;
  }
}

.watch {
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 1rem;
}

.last-sec {
  flex-direction: column;
  align-items: flex-start;
  gap: 1rem;
}

.last-sec-img {
  width: 100%;
  overflow-x: scroll;
}

.foo2 , .foo3 {
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

button {
  width: 100%;
}

}

